--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- boostrap css -->
   <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
   <!-- bootsnipp -->
-  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <!-- fontawesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
@@ -1151,8 +1151,8 @@
   <script type="text/javascript" src="dist/js/jquery.min.js"></script>
   <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
   <!-- bootsnip and query -->
-  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <!-- parsely -->
   <script src="https://rawgit.com/guillaumepotier/Parsley.js/2.7.2/dist/parsley.js"></script>
   <!--mob FlexSlider -->
