--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@
                   <input type="text" id="fname" class="form-control mb-2" name="firstname" placeholder="الاسم ..">
                   <input type="emil" id="email" class="form-control mb-2" name="email" placeholder="الايميل ..">
                   <input type="tel" id="telephone" class="form-control mb-2" name="teleophone" placeholder="الهاتف ..">
-                  <textarea class="form-control" rows="4" cols="50">الرساله</textarea>
+                  <textarea class="form-control" rows="4" cols="50" placeholder="الرساله"></textarea>
                 </div>
                 <div class="col-lg-12">
                   <button data-type="reset" class="btn" onclick="resetForm();" type="button">مسح</button>
